WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312488
[Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/flex-minimum-height-flex-items-023.html
https://bugs.webkit.org/show_bug.cgi?id=312488
Summary
[Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/flex-minimum-heigh...
alan
Reported
2026-04-16 10:26:36 PDT
ssia
Attachments
Patch
(5.62 KB, patch)
2026-04-16 11:08 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(5.62 KB, patch)
2026-04-16 13:08 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(6.56 KB, patch)
2026-04-16 19:52 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-04-16 11:08:23 PDT
Created
attachment 479108
[details]
Patch
alan
Comment 2
2026-04-16 13:08:19 PDT
Created
attachment 479113
[details]
Patch
alan
Comment 3
2026-04-16 19:52:19 PDT
Created
attachment 479120
[details]
[fast-cq]Patch
EWS
Comment 4
2026-04-17 04:29:08 PDT
Committed
311443@main
(1d5202c6846d): <
https://commits.webkit.org/311443@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479120
[details]
.
Radar WebKit Bug Importer
Comment 5
2026-04-17 04:30:15 PDT
<
rdar://problem/174999995
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug